--- a/Views/Inmueble/Detalle.cshtml
+++ b/Views/Inmueble/Detalle.cshtml
@@ -68,7 +68,7 @@
     <div class="volver">
         <div class="form-group-spacing">
             <a asp-action="Index" title="Volver">
-                <i class="fa-solid fa-undo"></i>
+                <i class="fa-solid fa-undo fa-lg"></i>
             </a>
         </div>
     </div>
