--- a/Views/Inmueble/ListaPorPropietario.cshtml
+++ b/Views/Inmueble/ListaPorPropietario.cshtml
@@ -67,7 +67,7 @@
 
 <div class="form-group-spacing volver">
     <a asp-action="Index" title="Volver">
-        <i class="fa-solid fa-undo"></i>
+        <i class="fa-solid fa-undo fa-lg"></i>
     </a>
 </div>
 
