--- a/Views/Inmueble/_InmueblesPartial.cshtml
+++ b/Views/Inmueble/_InmueblesPartial.cshtml
@@ -9,8 +9,7 @@
             <th>Ambientes</th>
             <th>Precio</th>
             <th>Estado</th>
-            <th>Suspendido</th>
-            <th>Activar / Desactivar</th>
+            <th>Suspender / Activar</th>
         </tr>
     </thead>
     <tbody>
@@ -26,29 +25,30 @@
                 <td>
                     @if (inmueble.Estado)
                     {
-                        <span style="color: rgb(26, 163, 26);">
-                            <i class="fas fa-check estado-true"></i>
+                        var estado = inmueble.Estado;
+                        <span class="badge bg-success" )">
+                            Disponible
                         </span>
                     }
                     else
                     {
-                        <span style="color: red;">
-                            <i class="fas fa-times estado-false"></i>
+                        <!-- Opcionalmente, maneja el caso en que `item.Estado` es null -->
+                        <span class="badge bg-danger">
+                            No Disponible
                         </span>
                     }
                 </td>
-                <td>@(inmueble.Suspendido ? "Sí" : "No")</td>
                 <td>
-                    @if (inmueble.Suspendido)
+                    @if (!inmueble.Estado)
                     {
                         <button type="button" class="btn btn-success" onclick="reactivar(@inmueble.Id)" title="Reactivar">
-                            <i class="fa-solid fa-play"></i>
+                            <i class="fa-solid fa-play fa-lg"></i>
                         </button>
                     }
                     else
                     {
                         <button type="button" class="btn btn-warning" onclick="suspender(@inmueble.Id)" title="Suspender">
-                            <i class="fa-solid fa-pause"></i>
+                            <i class="fa-solid fa-pause fa-lg"></i>
                         </button>
                     }
                 </td>
