--- a/Views/Inquilino/Detalle.cshtml
+++ b/Views/Inquilino/Detalle.cshtml
@@ -43,7 +43,7 @@
     </div>
     <div class="form-group-spacing">
         <a asp-action="Index" title="Volver">
-            <i class="fa-solid fa-undo"></i>
+            <i class="fa-solid fa-undo fa-lg"></i>
         </a>
     </div>
 </div>
