--- a/Views/Inquilino/Index.cshtml
+++ b/Views/Inquilino/Index.cshtml
@@ -10,7 +10,7 @@
 <p>
     <button type="button" class="btn btn-ligth">
         <a href="/Inquilino/Editar" title="Agregar Inquilino">
-            <i class="fa-duotone fa-solid fa-plus"></i>
+            <i class="fa-duotone fa-solid fa-plus fa-2x"></i>
         </a>
     </button>
 </p>
@@ -45,13 +45,13 @@
                         <a href="/Propietario/Editar/@item.Id"></a>
                         <form action="@Url.Action("Editar", new{id = item.Id})" method="get" style="display:inline;">
                             <button type="submit" class="btn btn-warning btn-custom" title="Editar">
-                                <i class="fa-solid fa-pen"></i>
+                                <i class="fa-solid fa-pen fa-lg"></i>
                             </button>
                         </form>
                         <a href="/Propietario/Detalle/@item.Id"></a>
                         <form action="@Url.Action("Detalle", new{id = item.Id})" method="get" style="display:inline;">
                             <button type="submit" class="btn btn-info btn-custom" title="Detalles">
-                                <i class="fa-solid fa-circle-info"></i>
+                                <i class="fa-solid fa-circle-info fa-lg"></i>
                             </button>
                         </form>
                     }
@@ -59,7 +59,7 @@
                     {
                         <button type="submit" class="btn btn-danger btn-custom"
                             onclick="eliminar(@item.Id, `@item.Nombre`, `@item.Apellido`)" title="Eliminar">
-                            <i class="fas fa-trash"></i>
+                            <i class="fas fa-trash fa-lg"></i>
                         </button>
                     }
                 </td>
