--- a/Views/Propietario/Editar.cshtml
+++ b/Views/Propietario/Editar.cshtml
@@ -55,7 +55,7 @@
         </form>
         <div class="form-group-spacing volver">
             <a asp-action="Index" title="Volver">
-                <i class="fa-solid fa-undo"></i>
+                <i class="fa-solid fa-undo fa-lg"></i>
             </a>
         </div>
     </div>
