--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,19 +35,21 @@
 
 
        @*                                     CONTRATO                                *@
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
+                         @if (isEmple || isAdmin)
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Contratos</a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Contrato"
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Contrato"
                                         asp-action="Index">Principal</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Contrato"
-                                        asp-action="Editar">Crear contrato</a></li>
-                               
-                                
-                            </ul>
-                        </li>
+                                    <li><a class="dropdown-item" asp-area="" asp-controller="Contrato"
+                                        asp-action="Crear">Crear contrato</a></li>
 
+
+                                </ul>
+                            </li>
+                        }
 
 
                         <li class="nav-item dropdown">
@@ -55,16 +57,16 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">Inmuebles</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
-                                        asp-action="Buscar">Buscar inmuebles</a></li>
+                                        asp-action="BuscarInmuebles">Buscar inmueble</a></li>
                               @if (isEmple || isAdmin)
                                 {
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
                                         asp-action="ListaPorPropietario">Inmuebles por Propietario</a></li>
-                                }
+                                
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
                                         asp-action="Index">Listado de inmuebles</a></li>
-                                @if (isEmple || isAdmin)
-                                {
+                               
+                            
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Inmueble"
                                         asp-action="Editar">Nuevo Inmueble</a></li>
                                 }
@@ -92,7 +94,8 @@
 
                       @*                           PAGOS                             *@
 
-
+                        @if (isEmple || isAdmin)
+                        {
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Pagos</a>
@@ -104,7 +107,7 @@
                                         data-bs-target="#paymentModal" id="openModalBtn">Nuevo Pago</a></li>
                             </ul>
                         </li>
-
+                        }
 
                         @if (isEmple || isAdmin)
                         {
@@ -133,8 +136,6 @@
                                             asp-action="Index">Lista de Usuarios</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="Usuario"
                                             asp-action="Crear">Nuevo Usuario</a></li>
-                                    <li><a class="dropdown-item" asp-area="" asp-controller="Usuario"
-                                            asp-action="Login">Editar Usuario</a></li>
                                     <li><a class="dropdown-item" asp-area="" asp-controller="" asp-action=""></a></li>
                                 </ul>
                             </li>
@@ -149,16 +150,18 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Usuario" asp-action="Editar"
-                                        asp-route-id="@userId">Perfil </a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Usuario"
-                                        asp-action="Avatar">Editar Avatar</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Usuario" asp-action="">otra
-                                        opcion</a></li>
+                                        asp-route-id="@userId">Perfil </a></li>                              
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Usuario"
                                         asp-action="Logout">Salir</a></li>
                             </ul>
                         </li>
-                        }                       
+                        }     
+                        @if (!isAdmin && !isEmple)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Usuario" asp-action="Login">Ingresar</a>
+                            </li>
+                        }         
                     </ul>
                 </div>
             </div>
@@ -175,7 +178,7 @@
            @* @Html.Partial("../Pago/Nuevo", new inmobiliaria_AT.Models.Pago())  *@
 
     </div>
-
+ 
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2024 - Inmobiliaria AT - <a asp-area="" asp-controller="Home" asp-action="Privacy">Contáctanos</a>
@@ -183,19 +186,11 @@
     </footer>
 
     
-        <script>
-        $(document).ready(function () {
-            $('#openModalBtn').click(function () {
-                $('#paymentModal').modal('show');
-                $.get('@Url.Action("Nuevo", "Pago")', function (data) {
-                    $('#paymentModal .modal-content').html(data);
-                });
-            });
-        });
-    </script>
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/tipoAgregar.js"></script>
     <script src="~/js/tipoModificar.js"></script>
@@ -205,6 +200,16 @@
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
 
+     <script>
+        $(document).ready(function () {
+            $('#openModalBtn').click(function () {
+                $('#paymentModal').modal('show');
+                $.get('@Url.Action("Nuevo", "Pago")', function (data) {
+                    $('#paymentModal .modal-content').html(data);
+                });
+            });
+        });
+    </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
