--- a/Views/Usuario/Login.cshtml
+++ b/Views/Usuario/Login.cshtml
@@ -19,7 +19,7 @@
                 <input asp-for="Password" type="password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-4">
                 <input type="submit" value="Ingresar" class="btn btn-primary" />
             </div>
         </form>
